[gd_scene load_steps=6 format=2]

[ext_resource path="res://Production/Commodities/cash.png" type="Texture" id=1]
[ext_resource path="res://Objects/GroundLitter/ProductLitter.gd" type="Script" id=2]
[ext_resource path="res://sfx/slurp.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/slurp2.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="ProductLitter" type="Area2D"]
z_index = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Audio" type="Node2D" parent="."]

[node name="slurp" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 3 )

[node name="slurp2" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 4 )

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_ProductLitter_area_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
